--- a/package.json
+++ b/package.json
@@ -19,8 +19,16 @@
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
+    "@capacitor/android": "^2.4.7",
     "@capacitor/core": "2.4.7",
+    "@ionic-native/core": "^5.31.1",
+    "@ionic-native/http": "^5.31.1",
+    "@ionic-native/speech-recognition": "^5.31.1",
     "@ionic/angular": "^5.5.2",
+    "@liwb/pinyin": "0.0.0-development",
+    "cordova-plugin-speechrecognition": "^1.2.0",
+    "hanzi-to-pinyin": "^1.71.0",
+    "pinyin-rest": "^1.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
