--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@ionic-native/core": "^5.31.1",
     "@ionic-native/http": "^5.31.1",
     "@ionic-native/speech-recognition": "^5.31.1",
+    "@ionic-native/status-bar": "^5.33.0",
     "@ionic/angular": "^5.5.2",
     "cordova-plugin-speechrecognition": "^1.2.0",
+    "cordova-plugin-statusbar": "^2.4.3",
     "firebase": "^8.4.1",
     "rxjs": "~6.6.0",
     "stream": "0.0.2",
