--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ionic-native/status-bar": "^5.33.0",
     "@ionic-native/text-to-speech": "^5.33.0",
     "@ionic/angular": "^5.5.2",
+    "@ionic/storage": "2.2.0",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "cordova-plugin-speechrecognition": "^1.2.0",
     "cordova-plugin-statusbar": "^2.4.3",
